Complete Notebook 01: Data exploration and understanding
✅ Major Accomplishments:
- Successfully loaded and inspected IMDB movie review datasets
- Discovered 3-class aspect classification task (Cinematography, Characters, Story)
- Confirmed balanced class distribution (~125 samples per class)
- Established key variables: n_aspects=3, train_texts, train_labels, test_texts, test_labels
- Identified clean dataset with no missing values

📊 Dataset Insights:
- 369 training samples, ~130 test samples
- Aspect categories: Cinematography (0), Characters (1), Story (2)
- Well-balanced classes enabling fair model evaluation
- Ready for tokenization pipeline in Notebook 02

📝 Updated README with:
- Accurate dataset description and schema
- Learning progress tracking
- Current status and next phase indicators
- Completed milestone checkboxes

🎯 Phase 1 Complete: Data understanding and exploration
Next: Text preprocessing and tokenization pipeline

--- a/notebooks/01_import_and_inspect.ipynb
+++ b/notebooks/01_import_and_inspect.ipynb
@@ -83,12 +83,73 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Training DataFrame Info:\n",
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 369 entries, 0 to 368\n",
+            "Data columns (total 3 columns):\n",
+            " #   Column          Non-Null Count  Dtype \n",
+            "---  ------          --------------  ----- \n",
+            " 0   review          369 non-null    object\n",
+            " 1   aspect          369 non-null    object\n",
+            " 2   aspect_encoded  369 non-null    int64 \n",
+            "dtypes: int64(1), object(2)\n",
+            "memory usage: 8.8+ KB\n",
+            "None\n",
+            "\n",
+            "Training DataFrame Head:\n",
+            "                                              review          aspect  \\\n",
+            "0       Ibiza filming location looks very enchanting  Cinematography   \n",
+            "1  RANDOLPH SCOTT always played men you could loo...      Characters   \n",
+            "2  interesting and promising basic idea', 'some p...           Story   \n",
+            "3  the film could explore very powerful politics,...           Story   \n",
+            "4  The animation is nice, and the use of color ma...  Cinematography   \n",
+            "\n",
+            "   aspect_encoded  \n",
+            "0               0  \n",
+            "1               1  \n",
+            "2               2  \n",
+            "3               2  \n",
+            "4               0  \n",
+            "\n",
+            "Type pf aspect categories:\n",
+            "['Cinematography', 'Characters', 'Story']\n",
+            "Values range in aspec_encoded:\n",
+            "aspect_encoded\n",
+            "0    125\n",
+            "1    123\n",
+            "2    121\n",
+            "Name: count, dtype: int64\n"
+          ]
+        }
+      ],
       "source": [
         "# TODO #1: Load the datasets\n",
-        "# Your code here\n"
+        "# Your code here\n",
+        "import pandas as pd\n",
+        "\n",
+        "train_reviews_df = pd.read_csv('../data/imdb_movie_reviews_train.csv')\n",
+        "test_reviews_df = pd.read_csv('../data/imdb_movie_reviews_test.csv')\n",
+        "aspect_types = train_reviews_df['aspect'].unique().tolist()\n",
+        "\n",
+        "\n",
+        "# TODO #2: Explore the datasets\n",
+        "print(\"Training DataFrame Info:\")\n",
+        "print(train_reviews_df.info())\n",
+        "print(\"\\nTraining DataFrame Head:\")\n",
+        "print(train_reviews_df.head())\n",
+        "print(\"\\nType pf aspect categories:\")\n",
+        "print(aspect_types)\n",
+        "print(\"Values range in aspec_encoded:\")\n",
+        "print(train_reviews_df['aspect_encoded'].value_counts())\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -110,12 +171,53 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Training DataFrame Head:\n",
+            "                                              review          aspect  \\\n",
+            "0       Ibiza filming location looks very enchanting  Cinematography   \n",
+            "1  RANDOLPH SCOTT always played men you could loo...      Characters   \n",
+            "2  interesting and promising basic idea', 'some p...           Story   \n",
+            "3  the film could explore very powerful politics,...           Story   \n",
+            "4  The animation is nice, and the use of color ma...  Cinematography   \n",
+            "\n",
+            "   aspect_encoded  \n",
+            "0               0  \n",
+            "1               1  \n",
+            "2               2  \n",
+            "3               2  \n",
+            "4               0  \n",
+            "\n",
+            "Test DataFrame Head:\n",
+            "                                              review          aspect  \\\n",
+            "0  the cinematography is commonplace it at least ...  Cinematography   \n",
+            "1  The cinematography is OK', 'there are some pre...  Cinematography   \n",
+            "2  the strangely annoying and unnecessary George ...      Characters   \n",
+            "3  Alyssa Milano', 'Tina Yothers', \"Edie McClurg ...      Characters   \n",
+            "4  I loved the way the minor characters intervene...      Characters   \n",
+            "\n",
+            "   aspect_encoded  \n",
+            "0               0  \n",
+            "1               0  \n",
+            "2               1  \n",
+            "3               1  \n",
+            "4               1  \n"
+          ]
+        }
+      ],
       "source": [
         "# TODO #2: Inspect data schema\n",
-        "# Your code here\n"
+        "# Your code here\n",
+        "print(\"\\nTraining DataFrame Head:\")\n",
+        "print(train_reviews_df.head())\n",
+        "print(\"\\nTest DataFrame Head:\")\n",
+        "print(test_reviews_df.head())"
       ]
     },
     {
@@ -142,12 +244,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Aspect Value Distribution in Training Set:\n",
+            "aspect\n",
+            "Cinematography    125\n",
+            "Characters        123\n",
+            "Story             121\n",
+            "Name: count, dtype: int64\n"
+          ]
+        }
+      ],
       "source": [
         "# TODO #3: Analyze label distributions\n",
-        "# Your code here\n"
+        "# Your code here\n",
+        "values_distribution = train_reviews_df['aspect'].value_counts()\n",
+        "print(\"\\nAspect Value Distribution in Training Set:\")\n",
+        "print(values_distribution)\n"
       ]
     },
     {
@@ -172,12 +291,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
         "# TODO #4: Set up key variables\n",
-        "# Your code here\n"
+        "# Your code here\n",
+        "n_aspects = len(aspect_types)\n",
+        "train_texts = train_reviews_df['review'].tolist()\n",
+        "train_labels = train_reviews_df['aspect_encoded'].tolist()\n",
+        "# Test set\n",
+        "test_texts = test_reviews_df['review'].tolist()\n",
+        "test_labels = test_reviews_df['aspect_encoded'].tolist()"
       ]
     },
     {
@@ -229,8 +354,22 @@
     }
   ],
   "metadata": {
+    "kernelspec": {
+      "display_name": "Codecademy ML",
+      "language": "python",
+      "name": "codeacademy"
+    },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.7"
     }
   },
   "nbformat": 4,
