Complete Notebook 02: Tokenization pipeline with deep analysis
✅ Major Accomplishments:
- Successfully implemented tokenization function using regex pattern r'\b\w+\b'
- Created tokenized corpus from training and test datasets
- Identified key limitations of simple tokenization approach
- Added comprehensive reflection analysis on tokenization trade-offs

🔍 Key Discoveries:
- Contractions problematic: 'let's' → ['let', 's'] loses semantic meaning
- Emojis completely removed: 😁 disappears, losing emotional context
- Punctuation removal loses emphasis cues ('amazing!' vs 'amazing')
- Standalone letters meaningless: 's' from contractions provides no info

📊 Technical Implementation:
- Regex pattern correctly extracts word boundaries
- Lowercase conversion prevents vocabulary duplication
- Tokenized corpus ready for vocabulary building in Notebook 03
- Identified edge cases: contractions, possessives, special characters

🎯 Learning Insights:
- Simple tokenization shows exactly what information is lost
- TinyBERT comparison will be more meaningful due to identified limitations
- Understanding trade-offs between simple vs advanced tokenization
- Ready to see how subword tokenization handles these edge cases

📝 Updated README with:
- Phase 2 completion status
- Tokenization limitations documented
- Next phase: vocabulary building and encoding

🎯 Phase 2 Complete: Text preprocessing and tokenization
Next: Vocabulary building and text encoding pipeline

--- a/notebooks/02_preprocessing_tokenization.ipynb
+++ b/notebooks/02_preprocessing_tokenization.ipynb
@@ -66,14 +66,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['hello', 'world', 'this', 'is', 'a', 'test', 'ms', 'tokenization', 'is', 'in', 'good', 'mood', 'let', 's', 'see', 'what', 'happens']\n"
+          ]
+        }
+      ],
       "source": [
         "# TODO #1: Implement tokenization function\n",
         "import re\n",
         "\n",
-        "# Your code here\n"
+        "# Your code here\n",
+        "def tokenize(text):\n",
+        "    # Use regex to find words, ignoring punctuation\n",
+        "    tokens = re.findall(r'\\b\\w+\\b', text.lower())\n",
+        "    return tokens\n",
+        "\n",
+        "# Test the function\n",
+        "sample_test = \"Hello, world! This is a test. Ms. Tokenization is in 😁 good mood. Let's see what happens\"\n",
+        "print(tokenize(sample_test))  # Expected output: ['hello', 'world', 'this', 'is', 'a', 'test']\n"
       ]
     },
     {
@@ -98,12 +114,82 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[['ibiza', 'filming', 'location', 'looks', 'very', 'enchanting']]\n"
+          ]
+        }
+      ],
       "source": [
         "# TODO #2: Create tokenized corpus\n",
-        "# Your code here\n"
+        "# Your code here\n",
+        "import pandas as pd\n",
+        "\n",
+        "train_reviews_df = pd.read_csv('../data/imdb_movie_reviews_train.csv')\n",
+        "test_reviews_df = pd.read_csv('../data/imdb_movie_reviews_test.csv')\n",
+        "\n",
+        "tokenized_corpus_train = train_reviews_df['review'].apply(tokenize).tolist() \n",
+        "tokenized_corpus_test = test_reviews_df['review'].apply(tokenize).tolist()\n",
+        "\n",
+        "print(tokenized_corpus_train[:1])  # Print first tokenized review from training set"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 📝 My Reflections\n",
+        "\n",
+        "### 🤔 Understanding Check Answers\n",
+        "\n",
+        "1. **Why remove punctuation?** \n",
+        "   - Punctuation creates noise in vocabulary and doesn't carry semantic meaning for classification\n",
+        "   - If kept as separate tokens, it would bloat the vocabulary with meaningless entries like \"!\", \"?\", \",\"\n",
+        "   - However, we lose emphasis and emotional cues (e.g., \"amazing!\" vs \"amazing\")\n",
+        "\n",
+        "2. **What information do we lose by lowercasing?**\n",
+        "   - Proper nouns become generic (e.g., \"Movie\" → \"movie\" loses the specific film reference)\n",
+        "   - Acronyms lose their distinctiveness (e.g., \"IMDB\" → \"imdb\")\n",
+        "   - Some context about emphasis and importance\n",
+        "\n",
+        "3. **How does the regex pattern `r'\\b\\w+\\b'` work?**\n",
+        "   - `\\b` = word boundary (invisible position between word and non-word characters)\n",
+        "   - `\\w+` = one or more word characters (letters, digits, underscore)\n",
+        "   - `\\b` = another word boundary\n",
+        "   - This ensures clean tokenization at word boundaries, but still splits contractions like \"let's\" → [\"let\", \"s\"]\n",
+        "\n",
+        "4. **Why is consistent tokenization important?**\n",
+        "   - Inconsistent tokenization creates duplicate vocabulary entries\n",
+        "   - Same word tokenized differently leads to vocabulary bloat and confusion\n",
+        "   - Neural networks need consistent input representations\n",
+        "\n",
+        "### 🎯 Tokenization Quality Assessment\n",
+        "\n",
+        "**What I discovered:**\n",
+        "- **Contractions are problematic**: \"let's\" → [\"let\", \"s\"] loses semantic meaning\n",
+        "- **Emojis are completely removed**: 😁 disappears, losing emotional context\n",
+        "- **Standalone letters are meaningless**: \"s\" from \"let's\" provides no information\n",
+        "- **Punctuation removal loses emphasis**: \"amazing!\" vs \"amazing\" are different\n",
+        "\n",
+        "**Edge cases my tokenizer doesn't handle well:**\n",
+        "- Contractions (let's, don't, won't)\n",
+        "- Possessives (John's → [\"john\", \"s\"])\n",
+        "- Emojis and special characters\n",
+        "- Punctuation that carries meaning\n",
+        "\n",
+        "**How TinyBERT will differ:**\n",
+        "- Subword tokenization keeps meaningful parts (\"let's\" → [\"let\", \"'s\"])\n",
+        "- Preserves punctuation and special characters\n",
+        "- Handles contractions intelligently\n",
+        "- Converts emojis to text or preserves them\n",
+        "- Much more sophisticated vocabulary management\n",
+        "\n",
+        "**Key insight:** This simple tokenization approach will show us exactly what information is lost, making the TinyBERT comparison much more meaningful. The baseline model will struggle with contractions and lose emotional context, while TinyBERT should handle these cases much better.\n"
       ]
     },
     {
@@ -133,8 +219,22 @@
     }
   ],
   "metadata": {
+    "kernelspec": {
+      "display_name": "Codecademy ML",
+      "language": "python",
+      "name": "codeacademy"
+    },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.7"
     }
   },
   "nbformat": 4,
