--- a/notebooks/03_vocab_and_encoding.ipynb
+++ b/notebooks/03_vocab_and_encoding.ipynb
@@ -64,14 +64,50 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[['ibiza', 'filming', 'location', 'looks', 'very', 'enchanting']]\n",
+            "['ibiza', 'filming', 'location', 'looks', 'very', 'enchanting', 'randolph', 'scott', 'always', 'played', 'men', 'you', 'could', 'look', 'up', 'to', 'for', 'their', 'sense', 'of']\n",
+            "[('the', 732), ('a', 307), ('and', 306), ('of', 296), ('is', 218), ('to', 213), ('in', 177), ('it', 134), ('s', 109), ('that', 105)]\n"
+          ]
+        }
+      ],
       "source": [
         "# TODO #1: Build word frequencies\n",
         "from collections import Counter\n",
+        "import re\n",
         "\n",
-        "# Your code here\n"
+        "# Your code here\n",
+        "import pandas as pd\n",
+        "\n",
+        "def tokenize(text):\n",
+        "    # Use regex to find words, ignoring punctuation\n",
+        "    tokens = re.findall(r'\\b\\w+\\b', text.lower())\n",
+        "    return tokens\n",
+        "\n",
+        "\n",
+        "train_reviews_df = pd.read_csv('../data/imdb_movie_reviews_train.csv')\n",
+        "test_reviews_df = pd.read_csv('../data/imdb_movie_reviews_test.csv')\n",
+        "\n",
+        "tokenized_corpus_train = train_reviews_df['review'].apply(tokenize).tolist() \n",
+        "tokenized_corpus_test = test_reviews_df['review'].apply(tokenize).tolist()\n",
+        "\n",
+        "print(tokenized_corpus_train[:1])  # Print first tokenized review from training set\n",
+        "\n",
+        "combined_corpus = []\n",
+        "\n",
+        "for word in tokenized_corpus_train:\n",
+        "    combined_corpus.extend(word)\n",
+        "\n",
+        "print(combined_corpus[:20])  # Print first 20 words from combined corpus\n",
+        "\n",
+        "word_freqs = Counter(combined_corpus)\n",
+        "print(word_freqs.most_common(10))  # Print 10 most common words\n"
       ]
     },
     {
@@ -94,12 +130,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[('<PAD>', 0), ('<UNK>', 1), ('the', 2), ('a', 3), ('and', 4), ('of', 5), ('is', 6), ('to', 7), ('in', 8), ('it', 9)]\n",
+            "Vocabulary size: 1002\n"
+          ]
+        }
+      ],
       "source": [
         "# TODO #2: Create vocabulary dictionary\n",
-        "# Your code here\n"
+        "# Your code here\n",
+        "max_vocab_size = 1002\n",
+        "most_common_words = word_freqs.most_common(max_vocab_size - 2)  # Reserve 2 for <PAD> and <UNK>\n",
+        "vocab = {'<PAD>': 0, '<UNK>': 1, **{word: idx + 2 for idx, (word, _) in enumerate(most_common_words)}}\n",
+        "print(list(vocab.items())[:10])  # Print first 10 items in vocabulary dictionary\n",
+        "vocab_size = len(vocab)\n",
+        "print(f'Vocabulary size: {vocab_size}')  # Print vocabulary size"
       ]
     },
     {
@@ -128,12 +179,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[[1, 252, 591, 114, 26, 1]]\n",
+            "[[2, 91, 6, 1, 9, 34, 440, 125, 170, 1]]\n"
+          ]
+        }
+      ],
       "source": [
         "# TODO #3: Implement encoding function\n",
-        "# Your code here\n"
+        "# Your code here\n",
+        "def encode_text(text, vocab):\n",
+        "    tokens = tokenize(text)\n",
+        "    encoded = [vocab.get(token, vocab['<UNK>']) for token in tokens]\n",
+        "    return encoded\n",
+        "\n",
+        "encoded_reviews_train = train_reviews_df['review'].apply(lambda x: encode_text(x, vocab)).tolist()\n",
+        "encoded_reviews_test = test_reviews_df['review'].apply(lambda x: encode_text(x, vocab)).tolist()\n",
+        "\n",
+        "print(encoded_reviews_train[:1])  # Print first encoded review from training set\n",
+        "print(encoded_reviews_test[:1])  # Print first encoded review from test set"
       ]
     },
     {
@@ -163,8 +233,22 @@
     }
   ],
   "metadata": {
+    "kernelspec": {
+      "display_name": "Codecademy ML",
+      "language": "python",
+      "name": "codeacademy"
+    },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.7"
     }
   },
   "nbformat": 4,
