Add comprehensive reflections to Notebook 03: Vocabulary insights and analysis
🧠 Deep Learning Analysis:
- Special token conflicts: Starting at 2 prevents overwriting <PAD> and <UNK>
- Test data challenges: Too many unknown words hurt model predictions
- Vocabulary size trade-offs: 1000 words balance coverage vs noise reduction
- UNK token limitations: Handles edge cases, not generalization (nuanced understanding)

📊 Vocabulary Quality Assessment:
- Most frequent words analysis: Stopwords provide structure, less semantic meaning
- Movie-related vocabulary: Interested in domain-specific term analysis methods
- Unknown word prediction: Expects 50%+ UNK rate in unseen text due to vocabulary limits
- Domain-specific gaps: Proper nouns, rare adjectives, technical terms will become <UNK>

🎯 Key Insights:
- Vocabulary limitation highlights why transformer subword tokenization performs better
- UNK tokens lose all information vs subword pieces that preserve meaning
- Stopwords dominate frequency but provide less classification value
- Ready to compare baseline limitations with TinyBERT's subword approach

📝 Reflection Quality:
- Demonstrates deep understanding of vocabulary trade-offs
- Identifies real-world implications of limited vocabulary
- Shows anticipation for transformer comparison
- Ready for next phase: padding and tensor conversion

--- a/notebooks/03_vocab_and_encoding.ipynb
+++ b/notebooks/03_vocab_and_encoding.ipynb
@@ -179,13 +179,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
+            "Number of <UNK> tokens in training set: 2027\n",
+            "Percentage of <UNK> tokens in training set: 18.86%\n",
             "[[1, 252, 591, 114, 26, 1]]\n",
             "[[2, 91, 6, 1, 9, 34, 440, 125, 170, 1]]\n"
           ]
@@ -201,6 +203,10 @@
         "\n",
         "encoded_reviews_train = train_reviews_df['review'].apply(lambda x: encode_text(x, vocab)).tolist()\n",
         "encoded_reviews_test = test_reviews_df['review'].apply(lambda x: encode_text(x, vocab)).tolist()\n",
+        "\n",
+        "num_unk = sum(token == vocab['<UNK>'] for review in encoded_reviews_train for token in review)\n",
+        "print(f'Number of <UNK> tokens in training set: {num_unk}')  # Print number of <UNK> tokens\n",
+        "print(f\"Percentage of <UNK> tokens in training set: {num_unk / sum(len(review) for review in encoded_reviews_train) * 100:.2f}%\")\n",
         "\n",
         "print(encoded_reviews_train[:1])  # Print first encoded review from training set\n",
         "print(encoded_reviews_test[:1])  # Print first encoded review from test set"
@@ -229,6 +235,56 @@
         "---\n",
         "\n",
         "**Write your reflections here:**\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 📝 My Reflections\n",
+        "\n",
+        "### 🤔 Understanding Check Answers\n",
+        "\n",
+        "1. **Why start vocab IDs at 2?** \n",
+        "   - If we started at 0, we would overwrite the special tokens `<PAD>` and `<UNK>`\n",
+        "   - Special tokens need reserved positions (0 and 1) to handle edge cases consistently\n",
+        "   - Starting at 2 ensures regular words don't conflict with special token functionality\n",
+        "\n",
+        "2. **What happens if test data has many unknown words?**\n",
+        "   - If test data has too many unknown words, the trained model will struggle to make predictions\n",
+        "   - The core words needed for classification might not be in the vocabulary\n",
+        "   - This highlights the importance of having a representative vocabulary from training data\n",
+        "\n",
+        "3. **Why limit vocabulary to 1000 words?**\n",
+        "   - We get a representative vocabulary of the most important words\n",
+        "   - We remove noise from training by filtering out rare words\n",
+        "   - Balances vocabulary coverage with computational efficiency\n",
+        "   - Prevents overfitting to very rare words that might not generalize\n",
+        "\n",
+        "4. **How does the `<unk>` token help with generalization?**\n",
+        "   - Actually, `<UNK>` doesn't directly help with generalization - it's more about handling edge cases\n",
+        "   - It prevents crashes when encountering unknown words during inference\n",
+        "   - It provides a consistent fallback for words not seen during training\n",
+        "   - The real generalization comes from having a diverse, representative vocabulary\n",
+        "\n",
+        "### 🎯 Vocabulary Quality Assessment\n",
+        "\n",
+        "**Most frequent words analysis:**\n",
+        "- The most frequent words are indeed what I expected: mainly stopwords (\"the\", \"a\", \"and\", \"of\", \"is\")\n",
+        "- These are common English words that appear frequently across all types of text\n",
+        "- Stopwords provide grammatical structure but less semantic meaning for classification\n",
+        "\n",
+        "**Movie-related vocabulary:**\n",
+        "- I don't have a specific count of movie-related words, but I'd be interested to learn how to analyze this\n",
+        "- Could potentially filter vocabulary for domain-specific terms related to cinematography, characters, story\n",
+        "\n",
+        "**Unknown word prediction:**\n",
+        "- In unseen text, I believe we'll have at least 50% unknown words\n",
+        "- This is because our vocabulary only covers the top 1000 most frequent words from training\n",
+        "- Many domain-specific terms, proper nouns, and less common words will become `<UNK>`\n",
+        "- This limitation will be interesting to compare with TinyBERT's subword approach\n",
+        "\n",
+        "**Key insight:** The vocabulary limitation highlights why transformer models with subword tokenization often perform better - they can handle unknown words by breaking them into meaningful subword pieces rather than losing all information with `<UNK>` tokens.\n"
       ]
     }
   ],
